[gd_scene format=3 uid="uid://dfmnunvb3wtwm"]

[ext_resource type="PackedScene" uid="uid://ctf6ho5vxcyyy" path="res://Game/Ui/UpgradeModal/UpgradeButton.tscn" id="1_abdc0"]
[ext_resource type="Script" uid="uid://dgrtttjenktlj" path="res://Game/Ui/UpgradeModal/UpgradeModal.gd" id="1_d0xgl"]
[ext_resource type="Script" uid="uid://sh4xnpquev2s" path="res://Game/Items/ItemResource.gd" id="2_bvjom"]
[ext_resource type="Texture2D" uid="uid://dxjimpcfutnxj" path="res://Assets/Art/User Interface/Level Up/Upgrade.png" id="2_svbxa"]
[ext_resource type="Script" uid="uid://dfj50wg6u44xx" path="res://Game/Units/Player/PlayerResource.gd" id="3_ke5bf"]
[ext_resource type="Script" uid="uid://bvtjy2mkl872g" path="res://Game/Weapons/WeaponResource.gd" id="4_223da"]
[ext_resource type="Script" uid="uid://bbcv6s6mm0x0h" path="res://Game/Upgrades/UpgradeResource.gd" id="5_72k1v"]
[ext_resource type="Script" uid="uid://lciut81gvo4h" path="res://Game/Upgrades/UpgradeWeapon.gd" id="6_223da"]
[ext_resource type="Script" uid="uid://dms5y3buqcmqw" path="res://Game/Upgrades/UpgradeSize.gd" id="7_8hl3y"]
[ext_resource type="Script" uid="uid://dvicl7tavrmp3" path="res://Game/Upgrades/UpgradeSpeed.gd" id="8_fw2nu"]
[ext_resource type="Script" uid="uid://d3kpx4mb6hmth" path="res://Game/Upgrades/UpgradeHealth.gd" id="9_ik6pq"]
[ext_resource type="Script" uid="uid://nm5n8qgx1xr0" path="res://Game/Upgrades/UpgradeMass.gd" id="10_gpglt"]

[sub_resource type="Resource" id="Resource_2caot"]
script = ExtResource("3_ke5bf")
speed = 600.0
next_level_exp_required = 1.0
exp_required = 1.0

[sub_resource type="Resource" id="Resource_223da"]
script = ExtResource("6_223da")
name = "Extra Weapon"

[sub_resource type="Resource" id="Resource_8hl3y"]
script = ExtResource("10_gpglt")
name = "Extra Strength"

[sub_resource type="Resource" id="Resource_fw2nu"]
script = ExtResource("9_ik6pq")
name = "Extra Health"

[sub_resource type="Resource" id="Resource_ik6pq"]
script = ExtResource("7_8hl3y")
name = "Extra Size"

[sub_resource type="Resource" id="Resource_gpglt"]
script = ExtResource("8_fw2nu")
name = "Extra Speed"

[sub_resource type="Animation" id="Animation_223da"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(960, 344)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 125)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control1/Control/UpgradeButton1:facing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control2/Control/UpgradeButton2:facing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Control3/Control/UpgradeButton3:facing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Control4/Control/UpgradeButton4:facing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Control5/Control/UpgradeButton5:facing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_fw2nu"]
resource_name = "close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.39999998, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(960, 344), Vector2(960, 344), Vector2(110, 344)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 125), Vector2(200, 125), Vector2(1200, 125)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%UpgradeButton1:facing")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.39999998, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, -1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("%UpgradeButton2:facing")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.36666662, 0.56666666),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, -1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("%UpgradeButton3:facing")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.3333333, 0.53333336),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, -1.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("%UpgradeButton4:facing")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.29999998, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, -1.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("%UpgradeButton5:facing")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.26666665, 0.46666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, -1.0]
}

[sub_resource type="Animation" id="Animation_8hl3y"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2890, 344), Vector2(960, 344), Vector2(960, 344)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(968, 125), Vector2(0, 125), Vector2(0, 125)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%UpgradeButton1:facing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.26666668, 0.5333333, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-1.0, -1.0, 1.0, 1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("%UpgradeButton2:facing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(4.4703484e-08, 0.33333334, 0.5999999, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-1.0, -1.0, 1.0, 1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("%UpgradeButton3:facing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6666666, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-1.0, -1.0, 1.0, 1.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("%UpgradeButton4:facing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.46666667, 0.73333335, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-1.0, -1.0, 1.0, 1.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("%UpgradeButton5:facing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.5333333, 0.79999995, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-1.0, -1.0, 1.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fw2nu"]
_data = {
&"RESET": SubResource("Animation_223da"),
&"close": SubResource("Animation_fw2nu"),
&"open": SubResource("Animation_8hl3y")
}

[sub_resource type="Animation" id="Animation_ke5bf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LabelContainer/Label:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LabelContainer/Label:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LabelContainer/Label:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LabelContainer/Label:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CardsContainer:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ik6pq"]
resource_name = "close"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LabelContainer/Label:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.8833334, 1.2833333, 1.9833333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(215, 0), Vector2(400, 40), Vector2(294.5, 500)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LabelContainer/Label:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8833334, 1.4166666, 1.9166667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LabelContainer/Label:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8833334, 1.4166666, 1.8833332),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.1308997, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LabelContainer/Label:modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.7, 1.4166666, 1.9166665),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "animation"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CardsContainer/AnimationPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": PackedStringArray("close"),
"times": PackedFloat32Array(0)
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CardsContainer:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_2q4av"]
resource_name = "open"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LabelContainer/Label:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1.1333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(294.5, 500), Vector2(215, -20), Vector2(215, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LabelContainer/Label:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.06666666, 0.56666666, 0.76666665, 1.0999999),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.2, 1.2), Vector2(0.7, 0.7), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LabelContainer/Label:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.099999994, 0.56666666, 1.0999999),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.1308997, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LabelContainer/Label:modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.06666668, 0.56666666, 1.2833333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/4/type = "animation"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CardsContainer/AnimationPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": PackedStringArray("open"),
"times": PackedFloat32Array(0.3)
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CardsContainer:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.33333334),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wjask"]
_data = {
&"RESET": SubResource("Animation_ke5bf"),
&"close": SubResource("Animation_ik6pq"),
&"open": SubResource("Animation_2q4av")
}

[node name="UpgradeModal" type="Control" unique_id=827339811]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d0xgl")
player = SubResource("Resource_2caot")
upgrades = Array[ExtResource("5_72k1v")]([SubResource("Resource_223da"), SubResource("Resource_8hl3y"), SubResource("Resource_fw2nu"), SubResource("Resource_ik6pq"), SubResource("Resource_gpglt")])

[node name="Upgrade" type="TextureRect" parent="." unique_id=1050721719]
modulate = Color(1, 1, 1, 0.6862745)
layout_mode = 1
offset_right = 1920.0
offset_bottom = 1080.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_svbxa")

[node name="LabelContainer" type="Control" parent="." unique_id=1331850457]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 172.0
grow_horizontal = 2
pivot_offset_ratio = Vector2(0.5, 0.5)

[node name="Label" type="Label" parent="LabelContainer" unique_id=906313717]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -480.0
offset_right = 49.0
offset_bottom = 132.00098
grow_horizontal = 2
pivot_offset_ratio = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 100
text = "WAVE ENDED!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardsContainer" type="HBoxContainer" parent="." unique_id=1253458893]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -145.0
offset_right = 480.0
offset_bottom = 199.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
alignment = 1

[node name="Control1" type="Control" parent="CardsContainer" unique_id=1869685327]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="CardsContainer/Control1" unique_id=360828501]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="UpgradeButton1" parent="CardsContainer/Control1/Control" unique_id=866692791 instance=ExtResource("1_abdc0")]
unique_name_in_owner = true
layout_mode = 1
size_flags_horizontal = 3
theme = null
resource = SubResource("Resource_223da")

[node name="Control2" type="Control" parent="CardsContainer" unique_id=1922890617]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="CardsContainer/Control2" unique_id=1273634799]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="UpgradeButton2" parent="CardsContainer/Control2/Control" unique_id=819495792 instance=ExtResource("1_abdc0")]
unique_name_in_owner = true
layout_mode = 1
size_flags_horizontal = 3
theme = null
resource = SubResource("Resource_8hl3y")

[node name="Control3" type="Control" parent="CardsContainer" unique_id=1323324405]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="CardsContainer/Control3" unique_id=829700847]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="UpgradeButton3" parent="CardsContainer/Control3/Control" unique_id=1161993865 instance=ExtResource("1_abdc0")]
unique_name_in_owner = true
layout_mode = 1
size_flags_horizontal = 3
theme = null
resource = SubResource("Resource_fw2nu")

[node name="Control4" type="Control" parent="CardsContainer" unique_id=1358057647]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="CardsContainer/Control4" unique_id=483112422]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="UpgradeButton4" parent="CardsContainer/Control4/Control" unique_id=1654414396 instance=ExtResource("1_abdc0")]
unique_name_in_owner = true
layout_mode = 1
size_flags_horizontal = 3
theme = null
resource = SubResource("Resource_ik6pq")

[node name="Control5" type="Control" parent="CardsContainer" unique_id=411667545]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="CardsContainer/Control5" unique_id=2032047640]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="UpgradeButton5" parent="CardsContainer/Control5/Control" unique_id=119510827 instance=ExtResource("1_abdc0")]
unique_name_in_owner = true
layout_mode = 1
size_flags_horizontal = 3
theme = null
resource = SubResource("Resource_gpglt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CardsContainer" unique_id=736632429]
libraries/ = SubResource("AnimationLibrary_fw2nu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=589180736]
libraries/ = SubResource("AnimationLibrary_wjask")
